--- a/packages/lexical-playground/package.json
+++ b/packages/lexical-playground/package.json
@@ -32,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
+    "react-mathquill": "^1.0.2",
     "y-websocket": ">=1.3.x",
     "yjs": ">=13.5.42"
   },
